<resources>
    <string name="app_name">Perch</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_cental">CentalActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="user_name">Joe Bloggs</string>
    <string name="your_items">Your items:</string>
    <string name="add_item_name">Name</string>
    <string name="add_item_size">Size</string>
    <string name="add_item_brand">Brand</string>
    <string name="add_item_colour">Colour</string>
    <string name="add_item_condition">Condition</string>
    <string name="add_item_description">Description</string>

    <string name="password_reset"><u>Forgot password?</u></string>

    <string name="size_prompt">Choose a size</string>

    <string-array name="size_array">
        <item>Extra Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="condition_array">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_manage_posts">"Manage Posts "</string>

</resources>
