<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notifications">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.morgan.declan.samplelogin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.morgan.declan.samplelogin.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add_item"
        android:name="com.morgan.declan.samplelogin.ui.additem.AddItemFragment"
        android:label="@string/title_add_item"
        tools:layout="@layout/fragment_additem" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.morgan.declan.samplelogin.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />


</navigation>